--- a/x11-misc/piedock/ChangeLog
+++ b/x11-misc/piedock/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/piedock
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/piedock/ChangeLog,v 1.14 2012/04/10 07:49:46 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/piedock/ChangeLog,v 1.15 2012/11/08 16:59:24 jer Exp $
+
+*piedock-1.6.1 (08 Nov 2012)
+
+  08 Nov 2012; Jeroen Roovers <jer@gentoo.org> +piedock-1.6.1.ebuild,
+  +files/piedock-1.6.1-signals.patch:
+  Version bump.
 
 *piedock-1.6.0 (10 Apr 2012)
 
