--- a/x11-misc/piedock/ChangeLog
+++ b/x11-misc/piedock/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/piedock
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/piedock/ChangeLog,v 1.15 2012/11/08 16:59:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/piedock/ChangeLog,v 1.16 2012/11/08 17:01:06 jer Exp $
+
+  08 Nov 2012; Jeroen Roovers <jer@gentoo.org> -piedock-1.4.2.ebuild,
+  -piedock-1.4.3.ebuild, -piedock-1.5.0.ebuild:
+  Old.
 
 *piedock-1.6.1 (08 Nov 2012)
 
