--- a/games-emulation/stella/ChangeLog
+++ b/games-emulation/stella/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-emulation/stella
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/stella/ChangeLog,v 1.72 2012/11/08 19:38:39 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/stella/ChangeLog,v 1.73 2012/11/08 21:06:47 mr_bones_ Exp $
+
+*stella-3.7.4 (08 Nov 2012)
+
+  08 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> +stella-3.7.4.ebuild:
+  version bump
 
   08 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> -stella-3.3.ebuild,
   -stella-3.4.ebuild, -stella-3.5.ebuild:
