--- a/net-voip/ekiga/ChangeLog
+++ b/net-voip/ekiga/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-voip/ekiga
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/ekiga/ChangeLog,v 1.39 2012/10/24 21:49:34 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/ekiga/ChangeLog,v 1.40 2012/11/09 01:06:18 neurogeek Exp $
+
+*ekiga-3.9.90 (08 Nov 2012)
+
+  08 Nov 2012; Jesus Rivero <neurogeek@gentoo.org> +ekiga-3.9.90.ebuild:
+  Version bump
 
   24 Oct 2012; Jesus Rivero <neurogeek@gentoo.org> ekiga-3.2.7.ebuild:
   Restricting net-libs/ptlib and net-libs/opal DEPS to avoid selecting the new
