--- a/app-admin/diradm/ChangeLog
+++ b/app-admin/diradm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/diradm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/diradm/ChangeLog,v 1.39 2012/11/08 20:48:36 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/diradm/ChangeLog,v 1.40 2012/11/09 01:07:36 robbat2 Exp $
+
+  09 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> diradm-2.9.7.ebuild:
+  EAPI2 doins die.
 
 *diradm-2.9.7 (08 Nov 2012)
 
