Added myself as a maintainer
Package-Manager: portage-2.2.0_alpha138/cvs/Linux i686
Manifest-Sign-Key: 0x748B2C601F6F0683

--- a/net-voip/ekiga/ChangeLog
+++ b/net-voip/ekiga/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/ekiga
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/ekiga/ChangeLog,v 1.40 2012/11/09 01:06:18 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/ekiga/ChangeLog,v 1.41 2012/11/09 01:12:16 neurogeek Exp $
+
+  08 Nov 2012; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
+  Added myself as a maintainer
 
 *ekiga-3.9.90 (08 Nov 2012)
 
