--- a/media-libs/libwebp/ChangeLog
+++ b/media-libs/libwebp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libwebp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libwebp/ChangeLog,v 1.37 2012/10/20 18:52:38 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libwebp/ChangeLog,v 1.38 2012/11/09 08:48:16 ssuominen Exp $
+
+  09 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -libwebp-0.1.3.ebuild:
+  old
 
   20 Oct 2012; Raúl Porcel <armin76@gentoo.org> libwebp-0.2.0.ebuild:
   alpha/ia64 stable wrt #437184
