--- a/media-libs/libwebp/ChangeLog
+++ b/media-libs/libwebp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libwebp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libwebp/ChangeLog,v 1.38 2012/11/09 08:48:16 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libwebp/ChangeLog,v 1.39 2012/11/09 08:51:13 ssuominen Exp $
+
+*libwebp-0.2.1 (09 Nov 2012)
+
+  09 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +libwebp-0.2.1.ebuild:
+  Version bump wrt #442152 by Mike Gilbert
 
   09 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -libwebp-0.1.3.ebuild:
   old
