--- a/app-office/libreoffice/ChangeLog
+++ b/app-office/libreoffice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.386 2012/11/07 21:10:10 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.387 2012/11/09 09:45:16 scarabeus Exp $
+
+  09 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
+  So long binfilter.
 
   07 Nov 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   libreoffice-3.5.7.2.ebuild, libreoffice-3.6.3.2.ebuild,
