--- a/dev-embedded/u-boot-tools/ChangeLog
+++ b/dev-embedded/u-boot-tools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-embedded/u-boot-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/u-boot-tools/ChangeLog,v 1.28 2012/11/09 21:56:03 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/u-boot-tools/ChangeLog,v 1.29 2012/11/09 21:57:35 hwoarang Exp $
+
+  09 Nov 2012; Markos Chandras <hwoarang@gentoo.org>
+  u-boot-tools-2012.10.ebuild:
+  s/ewarn/einfo/
 
   09 Nov 2012; Markos Chandras <hwoarang@gentoo.org>
   u-boot-tools-2012.10.ebuild:
