--- a/net-analyzer/scli/ChangeLog
+++ b/net-analyzer/scli/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/scli
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/scli/ChangeLog,v 1.17 2012/09/24 18:13:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/scli/ChangeLog,v 1.18 2012/11/10 08:13:58 pinkbyte Exp $
+
+  10 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> scli-0.4.0-r1.ebuild:
+  Stable on amd64, bug #441432
 
   24 Sep 2012; Jeroen Roovers <jer@gentoo.org> -scli-0.2.12.ebuild,
   -files/scli-0.2.12-fix-configure.diff, -files/scli-0.2.12-gentoo.diff:
