--- a/net-analyzer/scli/ChangeLog
+++ b/net-analyzer/scli/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/scli
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/scli/ChangeLog,v 1.18 2012/11/10 08:13:58 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/scli/ChangeLog,v 1.19 2012/11/10 08:28:30 pinkbyte Exp $
+
+  10 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> scli-0.4.0-r1.ebuild:
+  Add ~amd64-linux keyword
 
   10 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> scli-0.4.0-r1.ebuild:
   Stable on amd64, bug #441432
