--- a/dev-python/chaco/ChangeLog
+++ b/dev-python/chaco/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/chaco
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/chaco/ChangeLog,v 1.14 2012/10/09 09:15:21 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/chaco/ChangeLog,v 1.15 2012/11/10 10:07:54 idella4 Exp $
+
+  11 Nov 2012; Ian Delaney <idella4@gentoo.org> chaco-4.0.0.ebuild,
+  chaco-4.1.0.ebuild, chaco-4.2.0.ebuild:
+  Added sphinx to DEPEND to build docs to 4.1.2, 4.2.0, fixes Bug #435858
 
 *chaco-4.2.0 (09 Oct 2012)
 
