--- a/app-misc/dtach/ChangeLog
+++ b/app-misc/dtach/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/dtach
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dtach/ChangeLog,v 1.18 2012/11/07 21:21:34 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dtach/ChangeLog,v 1.19 2012/11/10 10:08:20 ago Exp $
+
+  10 Nov 2012; <ago@gentoo.org> dtach-0.8-r1.ebuild:
+  Stable for amd64, wrt bug #426496
 
 *dtach-0.8-r1 (07 Nov 2012)
 
