--- a/app-crypt/gpgme/ChangeLog
+++ b/app-crypt/gpgme/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gpgme
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpgme/ChangeLog,v 1.197 2012/11/07 11:55:03 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpgme/ChangeLog,v 1.198 2012/11/10 12:13:04 rich0 Exp $
+
+  10 Nov 2012; Richard Freeman <rich0@gentoo.org> gpgme-1.3.2.ebuild:
+  amd64 stable - 441956
 
   07 Nov 2012; Anthony G. Basile <blueness@gentoo.org> gpgme-1.3.2.ebuild:
   stable arm, bug #441956
