--- a/dev-util/qfsm/ChangeLog
+++ b/dev-util/qfsm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/qfsm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qfsm/ChangeLog,v 1.1 2012/11/10 12:40:56 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qfsm/ChangeLog,v 1.2 2012/11/10 13:02:42 pinkbyte Exp $
+
+  10 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> qfsm-0.53.0.ebuild:
+  Fix doc path installation, bug #130641. Thanks to haarp for reporting this
+  issue
 
 *qfsm-0.53.0 (10 Nov 2012)
 
