--- a/mail-filter/dovecot_deleted_to_trash/ChangeLog
+++ b/mail-filter/dovecot_deleted_to_trash/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/dovecot_deleted_to_trash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/dovecot_deleted_to_trash/ChangeLog,v 1.1 2012/09/06 17:35:27 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/dovecot_deleted_to_trash/ChangeLog,v 1.2 2012/11/10 13:22:26 blueness Exp $
+
+  10 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  dovecot_deleted_to_trash-0.3.ebuild:
+  keyword ~ppc ~ppc64, bug #442040
 
 *dovecot_deleted_to_trash-0.3 (06 Sep 2012)
 
