--- a/mail-filter/dovecot_deleted_to_trash/ChangeLog
+++ b/mail-filter/dovecot_deleted_to_trash/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/dovecot_deleted_to_trash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/dovecot_deleted_to_trash/ChangeLog,v 1.2 2012/11/10 13:22:26 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/dovecot_deleted_to_trash/ChangeLog,v 1.3 2012/11/10 13:51:57 blueness Exp $
+
+  10 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  dovecot_deleted_to_trash-0.3.ebuild:
+  keyword ~arm, bug #442040
 
   10 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   dovecot_deleted_to_trash-0.3.ebuild:
