--- a/dev-db/drizzle/ChangeLog
+++ b/dev-db/drizzle/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-db/drizzle
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.30 2012/09/19 05:25:54 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.31 2012/11/11 01:59:58 flameeyes Exp $
+
+*drizzle-7.2.4 (11 Nov 2012)
+
+  11 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> +drizzle-7.2.4.ebuild,
+  +files/drizzle-7.2.4+boost-1.50.patch, +files/drizzle.init.d.2, metadata.xml:
+  Version bump; support boost-1.50 and later; add a dependency on libaio, and an
+  optional one on v8 (unstable); install a new init script that supports /run
+  more easily; the init script is known to fail with RANDMMAP is enabled,
+  problem not fixed yet.
 
 *drizzle-7.2.3 (19 Sep 2012)
 
