--- a/dev-db/drizzle/ChangeLog
+++ b/dev-db/drizzle/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/drizzle
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.31 2012/11/11 01:59:58 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.32 2012/11/11 02:04:53 flameeyes Exp $
+
+  11 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> -drizzle-7.2.3.ebuild:
+  Remove old version.
 
 *drizzle-7.2.4 (11 Nov 2012)
 
