--- a/dev-db/drizzle/ChangeLog
+++ b/dev-db/drizzle/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/drizzle
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.32 2012/11/11 02:04:53 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.33 2012/11/11 02:18:49 flameeyes Exp $
+
+  11 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> drizzle-7.2.4.ebuild,
+  files/drizzle.init.d.2:
+  Fix bug #419429 (build failure with Python 3 selected), thanks to Julian for
+  the patch. Also fix a missing 'use logger' in the init script.
 
   11 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> -drizzle-7.2.3.ebuild:
   Remove old version.
