--- a/dev-db/drizzle/files/drizzle.init.d.2
+++ b/dev-db/drizzle/files/drizzle.init.d.2
@@ -2,7 +2,7 @@
 # Copyright 1999-2012 Pavel Stratil, senbonzakura.eu
 # Some functions were taken from debian init script. Licensed under GPL-2
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/drizzle/files/drizzle.init.d.2,v 1.1 2012/11/11 01:59:58 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/drizzle/files/drizzle.init.d.2,v 1.2 2012/11/11 02:18:49 flameeyes Exp $
 
 #########################
 ### Construct vars ######
@@ -86,6 +86,7 @@ checkconfig() {
 
 depend() {
 	use localmount
+	use logger
 	use gearmand
 	use memcached
 
