--- a/dev-libs/boost/ChangeLog
+++ b/dev-libs/boost/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.277 2012/11/08 06:17:18 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.278 2012/11/11 05:27:48 flameeyes Exp $
+
+*boost-1.52.0-r2 (11 Nov 2012)
+
+  11 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> +boost-1.52.0-r2.ebuild,
+  -boost-1.46.1-r1.ebuild, -boost-1.51.0-r1.ebuild, -boost-1.52.0-r1.ebuild,
+  -files/boost-1.37.0-darwin-long-double.patch,
+  -files/boost-1.45.0-lambda_bind.patch, -files/boost-1.46.1-python32.patch,
+  -files/point_release_naming_fix.patch, -files/random-Jamfile-1.46.1,
+  -files/remove-toolset-1.46.1.patch, metadata.xml:
+  Remove old and cleanup files. Bump version 1.52 so that only one set of
+  libraries between debug and release is used; add a 'nls' USE flag to disable
+  the locale library due to bug #436262 (and right now no package in the tree
+  uses it anyway).
 
   08 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> boost-1.52.0-r1.ebuild:
   Only create the -mt links for USE=threads.
