--- a/dev-libs/boost/ChangeLog
+++ b/dev-libs/boost/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.278 2012/11/11 05:27:48 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.279 2012/11/11 05:50:39 flameeyes Exp $
+
+  11 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> boost-1.52.0-r2.ebuild:
+  Import the pkg_preinst bit to make sure the links are really gone.
 
 *boost-1.52.0-r2 (11 Nov 2012)
 
