--- a/dev-util/catalyst/ChangeLog
+++ b/dev-util/catalyst/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/catalyst
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.254 2012/11/02 16:06:10 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.255 2012/11/11 05:56:34 mattst88 Exp $
+
+  11 Nov 2012; Matt Turner <mattst88@gentoo.org> -catalyst-2.9999.ebuild:
+  The master branch is catalyst-2, and the catalyst_2 branch is now history.
 
   02 Nov 2012; Rick Farina <zerochaos@gentoo.org> catalyst-2.0.12.1.ebuild,
   catalyst-2.0.12.ebuild, catalyst-2.9999.ebuild, catalyst-3.9999.ebuild:
