--- a/dev-db/postgresql-docs/ChangeLog
+++ b/dev-db/postgresql-docs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/postgresql-docs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.176 2012/11/08 15:39:15 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.177 2012/11/11 11:26:52 ago Exp $
+
+  11 Nov 2012; <ago@gentoo.org> postgresql-docs-9.2.1.ebuild:
+  Stable for amd64, wrt bug #441144
 
   08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   postgresql-docs-9.2.1.ebuild:
