--- a/dev-db/postgresql-docs/ChangeLog
+++ b/dev-db/postgresql-docs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/postgresql-docs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.180 2012/11/11 11:39:40 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.181 2012/11/11 11:41:35 ago Exp $
+
+  11 Nov 2012; <ago@gentoo.org> postgresql-docs-9.1.6.ebuild:
+  Stable for amd64, wrt bug #441144
 
   11 Nov 2012; <ago@gentoo.org> postgresql-docs-9.0.10.ebuild:
   Stable for amd64, wrt bug #441144
