--- a/media-gfx/xsane/ChangeLog
+++ b/media-gfx/xsane/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/xsane
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xsane/ChangeLog,v 1.97 2012/11/11 11:29:25 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xsane/ChangeLog,v 1.98 2012/11/11 11:42:05 pinkbyte Exp $
+
+  11 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> xsane-0.998-r1.ebuild:
+  Fix QA issue with dosym, omitting basename for symlink wrt bug #442440
 
   11 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> xsane-0.998-r1.ebuild:
   Fix direct AR call wrt bug #442606. Thanks to Vicente Olivert Riera for
