--- a/dev-db/postgresql-base/ChangeLog
+++ b/dev-db/postgresql-base/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/postgresql-base
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.212 2012/11/11 11:40:08 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.213 2012/11/11 11:42:03 ago Exp $
+
+  11 Nov 2012; <ago@gentoo.org> postgresql-base-9.1.6.ebuild:
+  Stable for amd64, wrt bug #441144
 
   11 Nov 2012; <ago@gentoo.org> postgresql-base-9.0.10.ebuild:
   Stable for amd64, wrt bug #441144
