--- a/dev-db/postgresql-server/ChangeLog
+++ b/dev-db/postgresql-server/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/postgresql-server
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.224 2012/11/11 11:40:38 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.225 2012/11/11 11:42:31 ago Exp $
+
+  11 Nov 2012; <ago@gentoo.org> postgresql-server-9.1.6.ebuild:
+  Stable for amd64, wrt bug #441144
 
   11 Nov 2012; <ago@gentoo.org> postgresql-server-9.0.10.ebuild:
   Stable for amd64, wrt bug #441144
