--- a/dev-python/polygon/ChangeLog
+++ b/dev-python/polygon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/polygon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/polygon/ChangeLog,v 1.7 2012/08/02 06:43:25 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/polygon/ChangeLog,v 1.8 2012/11/11 13:08:01 blueness Exp $
+
+  11 Nov 2012; Anthony G. Basile <blueness@gentoo.org> polygon-3.0.4.ebuild:
+  keyword ~ppc, bug #442318
 
   02 Aug 2012; Patrick Lauer <patrick@gentoo.org> polygon-2.0.4.ebuild:
   Restricting jython
