--- a/dev-python/visual/ChangeLog
+++ b/dev-python/visual/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/visual
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/visual/ChangeLog,v 1.61 2012/07/07 19:19:25 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/visual/ChangeLog,v 1.62 2012/11/11 13:24:02 blueness Exp $
+
+  11 Nov 2012; Anthony G. Basile <blueness@gentoo.org> -visual-5.4.ebuild,
+  visual-5.72-r2.ebuild, visual-5.74.ebuild:
+  Keyword ~ppc for 5.74, remove 5.4, bug #442318
 
   07 Jul 2012; Mike Gilbert <floppym@gentoo.org>
   +files/visual-5.74-boost-1.50.patch, visual-5.74.ebuild:
