--- a/dev-python/polygon/ChangeLog
+++ b/dev-python/polygon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/polygon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/polygon/ChangeLog,v 1.9 2012/11/11 13:23:09 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/polygon/ChangeLog,v 1.10 2012/11/11 13:35:09 blueness Exp $
+
+  11 Nov 2012; Anthony G. Basile <blueness@gentoo.org> polygon-2.0.4.ebuild:
+  Rapid stabilization to heal tree, bug #442318
 
   11 Nov 2012; Anthony G. Basile <blueness@gentoo.org> polygon-2.0.4.ebuild:
   keyword ~ppc, bug #442318
