--- a/net-analyzer/labrea/ChangeLog
+++ b/net-analyzer/labrea/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/labrea
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/labrea/ChangeLog,v 1.12 2012/05/21 19:12:45 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/labrea/ChangeLog,v 1.13 2012/11/11 17:22:00 ago Exp $
+
+*labrea-2.5-r2 (11 Nov 2012)
+
+  11 Nov 2012; Agostino Sarubbo <ago@gentoo.org> +labrea-2.5-r2.ebuild:
+  Eapi4, convert src_install to emake, add ~amd64
 
   21 May 2012; Kacper Kowalik <xarthisius@gentoo.org> labrea-2.5-r1.ebuild:
   Add missing inheritance of eutils.eclass
@@ -44,4 +49,3 @@
   05 Jul 2004; Eldad Zack <eldad@gentoo.org> +metadata.xml,
   +labrea-2.5.ebuild:
   Initial ebuild. Closes #45777.
-
