--- a/media-libs/hamlib/ChangeLog
+++ b/media-libs/hamlib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/hamlib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.72 2012/11/06 17:07:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.73 2012/11/11 17:34:40 tomjbe Exp $
+
+  11 Nov 2012; Thomas Beierlein <tomjbe@gentoo.org> hamlib-1.2.15.ebuild,
+  hamlib-1.2.15.2.ebuild:
+  Make logs verbose (bug #442696). Thanks ago
 
   06 Nov 2012; Agostino Sarubbo <ago@gentoo.org> hamlib-1.2.15.2.ebuild:
   Stable for amd64, wrt bug #441368
