--- a/media-libs/hamlib/ChangeLog
+++ b/media-libs/hamlib/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/hamlib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.73 2012/11/11 17:34:40 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.74 2012/11/11 17:37:49 tomjbe Exp $
+
+*hamlib-1.2.15.3 (11 Nov 2012)
+
+  11 Nov 2012; Thomas Beierlein <tomjbe@gentoo.org> -hamlib-1.2.12-r2.ebuild,
+  -hamlib-1.2.14.ebuild, +hamlib-1.2.15.3.ebuild:
+  Version bump. Remove old
 
   11 Nov 2012; Thomas Beierlein <tomjbe@gentoo.org> hamlib-1.2.15.ebuild,
   hamlib-1.2.15.2.ebuild:
