--- a/net-p2p/gtk-gnutella/ChangeLog
+++ b/net-p2p/gtk-gnutella/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/gtk-gnutella
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/gtk-gnutella/ChangeLog,v 1.141 2012/08/22 20:03:37 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/gtk-gnutella/ChangeLog,v 1.142 2012/11/11 17:54:21 graaff Exp $
+
+  11 Nov 2012; Hans de Graaff <graaff@gentoo.org> -gtk-gnutella-0.98.2.ebuild:
+  Cleanup.
 
   22 Aug 2012; Johannes Huber <johu@gentoo.org> gtk-gnutella-0.98.3.ebuild:
   Stable for x86, wrt bug #429190
