--- a/dev-ruby/sass/ChangeLog
+++ b/dev-ruby/sass/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sass
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.22 2012/09/29 15:21:57 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.23 2012/11/11 17:55:17 graaff Exp $
+
+*sass-3.2.3 (11 Nov 2012)
+
+  11 Nov 2012; Hans de Graaff <graaff@gentoo.org> +sass-3.2.3.ebuild:
+  Version bump.
 
   29 Sep 2012; Fabian Groffen <grobian@gentoo.org> sass-3.1.21.ebuild:
   Marked ~x64-macos
