--- a/dev-ruby/sass/ChangeLog
+++ b/dev-ruby/sass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/sass
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.23 2012/11/11 17:55:17 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.24 2012/11/11 17:57:37 graaff Exp $
+
+  11 Nov 2012; Hans de Graaff <graaff@gentoo.org> sass-3.2.3.ebuild:
+  Move forward ppc,ppc64 keywords, oops.
 
 *sass-3.2.3 (11 Nov 2012)
 
