--- a/net-p2p/gtk-gnutella/ChangeLog
+++ b/net-p2p/gtk-gnutella/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/gtk-gnutella
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/gtk-gnutella/ChangeLog,v 1.142 2012/11/11 17:54:21 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/gtk-gnutella/ChangeLog,v 1.143 2012/11/11 18:11:20 graaff Exp $
+
+*gtk-gnutella-0.98.4 (11 Nov 2012)
+
+  11 Nov 2012; Hans de Graaff <graaff@gentoo.org> +gtk-gnutella-0.98.4.ebuild:
+  Version bump.
 
   11 Nov 2012; Hans de Graaff <graaff@gentoo.org> -gtk-gnutella-0.98.2.ebuild:
   Cleanup.
