--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1073 2012/11/05 19:02:22 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1074 2012/11/11 18:28:20 armin76 Exp $
+
+  11 Nov 2012; Raúl Porcel <armin76@gentoo.org> vanilla-sources-3.5.7.ebuild:
+  alpha/arm/ia64/s390/sh/sparc stable wrt #438798
 
 *vanilla-sources-3.4.18 (05 Nov 2012)
 *vanilla-sources-3.0.51 (05 Nov 2012)
