--- a/media-radio/ax25-apps/ChangeLog
+++ b/media-radio/ax25-apps/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-radio/ax25-apps
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-apps/ChangeLog,v 1.19 2012/11/11 18:25:41 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-apps/ChangeLog,v 1.20 2012/11/11 18:49:21 tomjbe Exp $
+
+  11 Nov 2012; Thomas Beierlein <tomjbe@gentoo.org> ax25-apps-0.0.6-r1.ebuild,
+  +files/ax25-apps-0.0.6-cflags.patch:
+  Fix ignored CFLAGS (bug #442762). Thanks Diego.
 
   11 Nov 2012; Thomas Beierlein <tomjbe@gentoo.org> ax25-apps-0.0.8_rc2.ebuild:
   Fix dependency
