--- a/net-analyzer/labrea/ChangeLog
+++ b/net-analyzer/labrea/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/labrea
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/labrea/ChangeLog,v 1.13 2012/11/11 17:22:00 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/labrea/ChangeLog,v 1.14 2012/11/11 19:02:11 pinkbyte Exp $
+
+  11 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> labrea-2.5-r1.ebuild,
+  labrea-2.5-r2.ebuild:
+  Remove mirror RESTRICT
 
 *labrea-2.5-r2 (11 Nov 2012)
 
