Install two different Apache configuration files for 2.2 and 2.4, as access compat doesn't work nor does the IfModule trick. Fix the log permission for cgi-html as well.
Package-Manager: portage-2.2.0_alpha142/cvs/Linux x86_64
Manifest-Sign-Key: 0x1CD13C8AD4301342

--- a/net-analyzer/munin/files/munin.apache.include-2.4
+++ b/net-analyzer/munin/files/munin.apache.include-2.4
@@ -13,9 +13,7 @@ RewriteRule ^/munin/(.*) /munin-cgi/munin-cgi-html/$1 [PT,L]
 
 <Directory /usr/libexec/munin/cgi/>
 	Options +ExecCGI
-
-	Order allow,deny
-	Allow from all
+	Require all granted
 
 	<IfModule mod_fcgid.c>
 		SetHandler fcgid-script
@@ -26,6 +24,5 @@ RewriteRule ^/munin/(.*) /munin-cgi/munin-cgi-html/$1 [PT,L]
 </Directory>
 
 <Directory /etc/munin/static>
-	Order allow,deny
-	Allow from all
+	Require all granted
 </Directory>
