--- a/sci-libs/cxsparse/ChangeLog
+++ b/sci-libs/cxsparse/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/cxsparse
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/cxsparse/ChangeLog,v 1.22 2012/10/16 02:31:53 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/cxsparse/ChangeLog,v 1.23 2012/11/12 01:56:37 bicatali Exp $
+
+*cxsparse-3.1.1 (12 Nov 2012)
+
+  12 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> +cxsparse-3.1.1.ebuild,
+  metadata.xml:
+  Version bump
 
   16 Oct 2012;  <naota@gentoo.org> cxsparse-2.2.6.ebuild:
   Add ~x86-fbsd.
