--- a/sci-libs/cxsparse/ChangeLog
+++ b/sci-libs/cxsparse/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/cxsparse
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/cxsparse/ChangeLog,v 1.23 2012/11/12 01:56:37 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/cxsparse/ChangeLog,v 1.24 2012/11/12 02:02:11 bicatali Exp $
+
+  12 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> cxsparse-3.1.1.ebuild:
+  reintroduced dropped ~x86-fbsd
 
 *cxsparse-3.1.1 (12 Nov 2012)
 
