--- a/dev-python/pyxdg/ChangeLog
+++ b/dev-python/pyxdg/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pyxdg
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyxdg/ChangeLog,v 1.98 2012/10/07 09:35:39 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyxdg/ChangeLog,v 1.99 2012/11/12 04:29:51 radhermit Exp $
+
+*pyxdg-0.24 (12 Nov 2012)
+
+  12 Nov 2012; Tim Harder <radhermit@gentoo.org> +pyxdg-0.24.ebuild:
+  Version bump (bug #442836). Enable tests and remove examples use flag (don't
+  install tests as examples).
 
   07 Oct 2012; nixnut <nixnut@gentoo.org> pyxdg-0.23.ebuild:
   ppc stable #432384
