IAX provisioning fixes restore operation of the IAXy adapter, closes bug #437740 by Joseph. Patch by Jaco Kroon adds subscribe context to SipShowPeers AMI command, closes bug #440250. This is a new stable candidate.
Package-Manager: portage-2.1.11.31/cvs/Linux x86_64

--- a/net-misc/asterisk/ChangeLog
+++ b/net-misc/asterisk/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/asterisk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.419 2012/11/08 16:11:35 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.420 2012/11/13 13:58:42 chainsaw Exp $
+
+*asterisk-1.8.18.0 (13 Nov 2012)
+
+  13 Nov 2012; Tony Vroon <chainsaw@gentoo.org> +asterisk-1.8.18.0.ebuild:
+  IAX provisioning fixes restore operation of the IAXy adapter, closes bug
+  #437740 by Joseph. Patch by Jaco Kroon adds subscribe context to SipShowPeers
+  AMI command, closes bug #440250. This is a new stable candidate.
 
 *asterisk-11.0.1 (08 Nov 2012)
 
