Marking clucene-2.3.3.4-r4 ppc64 for bug 441938
Package-Manager: portage-2.1.10.65/cvs/Linux ppc64

--- a/dev-cpp/clucene/ChangeLog
+++ b/dev-cpp/clucene/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/clucene
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/clucene/ChangeLog,v 1.54 2012/10/01 11:41:11 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/clucene/ChangeLog,v 1.55 2012/11/13 16:47:29 ranger Exp $
+
+  13 Nov 2012; Brent Baude <ranger@gentoo.org> clucene-2.3.3.4-r4.ebuild:
+  Marking clucene-2.3.3.4-r4 ppc64 for bug 441938
 
   01 Oct 2012; Johannes Huber <johu@gentoo.org> -clucene-0.9.21b-r1.ebuild,
   -files/clucene-0.9.21b-doxygen.patch, -files/clucene-0.9.21b-gcc44.patch:
