--- a/www-plugins/kpartsplugin/ChangeLog
+++ b/www-plugins/kpartsplugin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/kpartsplugin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/kpartsplugin/ChangeLog,v 1.15 2012/11/14 20:40:24 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/kpartsplugin/ChangeLog,v 1.16 2012/11/14 20:42:28 johu Exp $
+
+  14 Nov 2012; Johannes Huber <johu@gentoo.org>
+  -files/kpartsplugin-20110823-xpi.patch, -kpartsplugin-20110823.ebuild:
+  Remove old.
 
   14 Nov 2012; Johannes Huber <johu@gentoo.org> kpartsplugin-20120723.ebuild:
   Stable for x86, wrt bug #441546
@@ -72,4 +76,3 @@
   +kpartsplugin-20100723.ebuild, +metadata.xml:
   New application, fixes bug 323565; thanks to Francesco Riosa for the
   original ebuild
-
